# Pacman-3D

./: CMakeLists.txt  README.md  compileLinux  compileWin32  sources.txt  todo.txt
include/: camera.h  entity.h  gameState.h  loader.h  manager.h  mesh.h  settings.h  texture.h  vertex.h  window.h
res/: fragment.shader  options.txt  vertex.shader
res/maps/: map1.txt  map2.txt  map3.txt
res/objects/: ghost.mtl
src/: camera.cpp  entity.cpp  loader.cpp  main.cpp  manager.cpp  mesh.cpp  settings.cpp  texture.cpp  vertex.cpp  window.cpp
